# EXCELChatBI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  deps.py  main.py  schemas.py
apps/api/routers/: agent_runs.py  analyze.py  chat.py  health.py  kb.py  report.py  stats.py  upload.py  workspace.py
apps/orchestrator/: __init__.py  agent_loop.py  agent_tools.py  chart_planner.py  chat_stream.py  context.py  dify_track.py  intent_router.py  kb_qa.py  stats_interpreter.py
apps/orchestrator/control/: __init__.py  claims.py  contracts.py  planner_contract.py  planner_prompt.py  semantic_verifier.py  state.py  verifier.py
apps/orchestrator/langgraph_track/: README.md  __init__.py
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
apps/web/e2e/: workspace-artifacts.spec.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/api/: client.ts
apps/web/src/components/: ChatPanel.tsx  ChatWorkspace.tsx  EChartsRenderer.tsx  ExcelUpload.tsx  KnowledgeQA.tsx  MarkdownText.tsx  ReportPanel.tsx  StatsPanel.tsx
apps/web/src/stores/: workspace.ts
apps/web/src/types/: index.ts
config/: data_policy.example.yaml  logging.yaml  models.example.yaml
deploy/: .env.production.example
deploy/milvus/: .env.example  docker-compose.yml
docs/: Agent自主化开发规划.md  ChatBI设计文档.md  MCP与Docker全阶段演进设计.md  数据画像安全策略.md  知识库升级验收基线.md  知识库部署与运维.md
docs/kb_samples/: 指标口径说明.md  留存与转化说明.md
docs/v2.4/: MCP与Docker架构决策.md  Planner与Verifier评测设计.md  README.md  SSE与任务控制协议.md  控制面与持久化设计.md  阶段0继续计划.md  阶段1实施记录.md
mcp_servers/: __init__.py
mcp_servers/chart/: __init__.py  renderer.py  schemas.py  server.py  tools.py
mcp_servers/code_interpreter/: __init__.py  server.py  tools.py
mcp_servers/common/: __init__.py  adapter.py  base_server.py  catalog.py  client_gateway.py  contracts.py  sdk_adapter.py  tool.py
mcp_servers/dataset_ops/: __init__.py  schemas.py  server.py  tools.py
mcp_servers/excel_parser/: __init__.py  profile.py  schemas.py  server.py  tools.py
mcp_servers/internal_data/: README.md  __init__.py
mcp_servers/report/: __init__.py  schemas.py  server.py  tools.py
mcp_servers/stats/: __init__.py  schemas.py  server.py  tools.py
scripts/: __init__.py  agent_eval_set.jsonl  agent_planner_eval.py  agent_verifier_eval.py  kb_admin.py  kb_eval.py  kb_eval_distractors.md  kb_eval_set.jsonl  kb_load_test.py  kb_rebuild.py  mcp_transport_probe.py  mcp_transport_probe_server.py  migration_rehearsal.py  milvus_bootstrap.py  reconcile_reports.py  semantic_verifier_eval_set.jsonl  semantic_verifier_v3_eval_set.jsonl  v23_baseline_eval.py
tests/: conftest.py  test_agent_claims.py  test_agent_loop.py  test_agent_planner_eval.py  test_agent_tools.py  test_agent_verifier.py  test_agent_verifier_eval.py  test_analyze_replan.py  test_api_hardening.py  test_artifact_contract_shadow.py  test_artifact_reconcile.py  test_chart_screenshot.py  test_chat_stream.py  test_concurrency_failfast.py  test_container_contract.py  test_data_boundary.py  test_dataset_ops.py  test_excel_profile.py  test_governance_control.py  test_kb_admin.py  test_kb_lifecycle.py  test_kb_lifecycle_api.py  test_kb_qa.py  test_mcp_protocol.py  test_migration_rehearsal.py  test_milvus_bootstrap.py  test_model_gateway.py  test_planner_contract.py  test_planner_pipeline.py  test_rag_chunking.py  test_rag_milvus.py  test_rag_retrieval.py  test_rag_sparse.py  test_report.py  test_semantic_verifier.py  test_session_store.py  test_smoke.py  test_stats_interpret.py  test_stats_tools.py  test_task_store.py  (+2 more)
tests/test_governance/: test_schema_validator.py
