# ChatBI 智能体 — 项目依赖与工具配置（uv 管理）
# 技术栈与版本锁定见 CLAUDE.md 第 4 节，不擅自更换或升级。

[project]
name = "excel-chatbi"
version = "0.1.0"
description = "中文优先的对话式 ChatBI 智能体（MVP 脚手架）"
readme = "README.md"
requires-python = ">=3.11,<3.12"        # CLAUDE 第4节锁定 Python 3.11
license = { text = "Proprietary" }

# ── 运行时依赖（按 CLAUDE 第4节选型，版本采用兼容性下界，uv.lock 固定具体版本）──
dependencies = [
    # Web / API
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "sse-starlette>=2.1,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-multipart>=0.0.9",          # 文件上传
    "pyyaml>=6.0,<7",                   # 读取 config/*.yaml

    # 模型接入（OpenAI 兼容适配层）
    "openai>=1.30,<2",
    "httpx>=0.27,<0.29",
    "tenacity>=8.3,<9",                 # 重试/降级

    # 数据处理
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "duckdb>=1.0,<2",

    # 统计
    "statsmodels>=0.14,<0.15",
    "scikit-learn>=1.5,<2",
    "prophet>=1.1,<2",

    # 图表截图
    "playwright>=1.44,<2",

    # 报告导出
    "weasyprint>=62,<63",

    # 治理：JSON Schema 校验（红线3）
    "jsonschema>=4.22,<5",

    # 中文 RAG
    "jieba>=0.42.1",
    "pymilvus>=2.4,<3",
    "FlagEmbedding>=1.2,<2",            # bge embedding / reranker

    # MCP 协议
    "mcp>=1.0,<2",

    # 存储客户端
    "redis>=5.0,<6",
    "minio>=7.2,<8",
    "psycopg[binary]>=3.1,<4",         # PostgreSQL

    # 可观测 / 日志
    "structlog>=24.1,<25",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.5,<0.6",
    "mypy>=1.10,<2",
]

# ── 构建：三个顶层包（apps / mcp_servers / packages）可被导入 ──
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "mcp_servers", "packages"]

[tool.uv]
package = true

# ── lint / 类型检查 ──
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "mcp_servers", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true          # 第三方库缺 stub 时不阻断
exclude = ["apps/web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
